# livejq

./: .gitignore  CHANGELOG.md  Cargo.toml  Livejq.toml  README.md  example_data.txt  generate_json  generate_json.go  livejq.toml  schema.toml
.github/workflows/: publish.yml  release.yml
src/: main.rs  print_json.rs
