[package]
name = "livejq"
version = "1.1.1"
edition = "2021"
authors = ["Kunal Singh <kunal@kunalsin9h.com>"]
license = "MIT"
description = "An alternative jq implementation in rust for continuous parsing without crashing on invalid JSON. With filters"
readme = "README.md"
homepage = "https://github.com/kunalsin9h/livejq"
repository = "https://github.com/kunalsin9h/livejq"
keywords = ["cli", "jq", "json", "parsing"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
serde = "1.0.204"
serde_json = "1.0.122"
toml = "0.8.19"

